--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -49,7 +49,7 @@
               href: QuickStarts/node-thumb.md
             - name: Python
               href: QuickStarts/python-thumb.md
-        - name: テキストの抽出 (Computer Vision - Read API)
+        - name: テキストの抽出 (Read API)
           items:
             - name: C#
               href: QuickStarts/CSharp-hand-text.md
@@ -59,7 +59,7 @@
               href: QuickStarts/javascript-hand-text.md
             - name: Python
               href: QuickStarts/python-hand-text.md
-        - name: 印刷されたテキストの抽出 (OCR)
+        - name: テキストの抽出 (OCR API)
           items:
             - name: C#
               href: QuickStarts/CSharp-print-text.md
@@ -105,7 +105,7 @@
       href: concept-detecting-color-schemes.md
     - name: スマート トリミングされたサムネイル
       href: concept-generating-thumbnails.md
-    - name: テキストの認識
+    - name: 光学式文字認識 (OCR)
       href: concept-recognizing-text.md
     - name: 成人向けコンテンツの検出
       href: concept-detecting-adult-content.md
