--- a/articles/governance/blueprints/index.yml
+++ b/articles/governance/blueprints/index.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Landing
 title: Azure Blueprints のドキュメント
-summary: Resource Manager テンプレート、ロールベースのアクセス制御、ポリシーなどの成果物を単一のブループリント定義にパッケージ化して、デプロイを簡略化しましょう。
+summary: Azure Resource Manager テンプレート、ロールベースのアクセス制御、ポリシーなどの成果物を単一のブループリント定義にパッケージ化して、デプロイを簡略化しましょう。
 metadata:
   title: Azure Blueprints のドキュメント
-  description: Resource Manager テンプレート、ロールベースのアクセス制御、ポリシーなどの成果物を単一のブループリント定義にパッケージ化して、デプロイを簡略化しましょう。
+  description: Azure Resource Manager テンプレート、ロールベースのアクセス制御、ポリシーなどの成果物を単一のブループリント定義にパッケージ化して、デプロイを簡略化しましょう。
   ms.service: blueprints
   ms.topic: landing-page
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
   ms.date: 06/29/2020
-  ms.openlocfilehash: 77959798ea5ab2369402f7e0a1ac8e7b530adc27
-  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
-  ms.translationtype: HT
+  ms.openlocfilehash: 04c99d2428bd3c92187ce9383f51d38a9729d22a
+  ms.sourcegitcommit: f684589322633f1a0fafb627a03498b148b0d521
+  ms.translationtype: 
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/30/2020
-  ms.locfileid: "85550210"
+  ms.lasthandoff: 07/06/2020
+  ms.locfileid: "85969381"
 landingContent:
 - title: Azure Blueprints について
   linkLists:
