--- a/articles/remote-rendering/tutorials/modeling/toc.yml
+++ b/articles/remote-rendering/tutorials/modeling/toc.yml
@@ -1,2 +1,4 @@
-- name: Maya で物理ベース レンダリング素材を設定する
+- name: Autodesk Maya で物理ベース レンダリング素材を設定する
   href: maya-material-setup.md
+- name: Autodesk 3DSMax で物理ベース レンダリング素材を設定する
+  href: 3dsmax-material-setup.md
