--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -101,6 +101,8 @@
       href: elevate-access-global-admin.md
     - name: 従来の管理者
       href: classic-administrators.md
+    - name: サブスクリプションを別のディレクトリに譲渡する (プレビュー)
+      href: transfer-subscription.md
     - name: トラブルシューティング
       href: troubleshooting.md
 - name: リファレンス
