--- a/articles/virtual-machines/workloads/sap/toc.yml
+++ b/articles/virtual-machines/workloads/sap/toc.yml
@@ -26,7 +26,7 @@
           href: hana-operations-model.md
         - name: 互換性のあるオペレーティング システム
           href: os-compatibility-matrix-hana-large-instance.md
-    - name: Architecture
+    - name: アーキテクチャ
       items:
         - name: 全般的なアーキテクチャ
           href: hana-architecture.md
@@ -261,6 +261,14 @@
       href: 'https://docs.microsoft.com/power-bi/desktop-sap-bw-connector'
     - name: Azure Data Factory による SAP HANA と Business Warehouse データの統合
       href: 'https://azure.microsoft.com/blog/azure-data-factory-offer-sap-hana-and-business-warehouse-data-integration'
+- name: SAP ソリューション向け Azure Monitor
+  items:
+    - name: SAP ソリューション向け Azure Monitor の概要
+      href: azure-monitor-overview.md
+    - name: SAP ソリューション向け Azure Monitor のプロバイダー
+      href: azure-monitor-providers.md
+    - name: SAP ソリューション向け Azure Monitor に関する FAQ
+      href: azure-monitor-faq.md
 - name: リファレンス
   items:
     - name: Azure CLI
