--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -16,8 +16,6 @@
       href: tutorial-access-private-cloud.md
     - name: 5 - プライベート クラウドのスケーリング
       href: tutorial-scale-private-cloud.md
-    - name: 6 - コンテンツ ライブラリを作成して VM をデプロイする
-      href: tutorial-deploy-vm-content-library.md
 - name: 概念
   items:
     - name: プライベート クラウドとクラスター
@@ -30,8 +28,6 @@
       href: concepts-identity.md
     - name: プライベート クラウドのアップグレード
       href: concepts-upgrades.md
-    - name: ロールベースのアクセス制御
-      href: concepts-rbac.md
 - name: 操作方法ガイド
   items:
     - name: HCX の設定
@@ -40,12 +36,20 @@
       href: manage-dhcp.md
     - name: 障害復旧
       href: disaster-recovery.md
+    - name: コンテンツ ライブラリを介して VM をデプロイする
+      href: deploy-vm-content-library.md
     - name: AVS 向けの Azure Backup Server
       items:
         - name: AVS 向けに Azure Backup Server を設定する
           href: set-up-mabs-for-avs.md
         - name: Azure Backup Server を使用して AVS VM をバックアップする
           href: backup-avs-vms-with-mabs.md
+    - name: Azure のネイティブ統合
+      items:
+        - name: API Management
+          href: concepts-api-management.md
+        - name: ハブ アンド スポーク
+          href: concepts-avs-hub-and-spoke-integration.md
 - name: リファレンス
   items: null
 - name: リソース
