--- a/articles/search/index.yml
+++ b/articles/search/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: HeidiSteen
   ms.author: heidist
   ms.date: 02/25/2020
-  ms.openlocfilehash: ab3352dbd6631c0c86656764dac748eac10fa79b
-  ms.sourcegitcommit: b396c674aa8f66597fa2dd6d6ed200dd7f409915
-  ms.translationtype: HT
+  ms.openlocfilehash: f5acb693e758d3a574b799b2999e6d956aaf883c
+  ms.sourcegitcommit: 845a55e6c391c79d2c1585ac1625ea7dc953ea89
+  ms.translationtype: 
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/07/2020
-  ms.locfileid: "82890088"
+  ms.lasthandoff: 07/05/2020
+  ms.locfileid: "85954504"
 landingContent:
 - title: Cognitive Search について
   linkLists:
@@ -54,7 +54,7 @@ landingContent:
       url: search-create-service-portal.md
     - text: インデックスを作成する
       url: search-get-started-portal.md
-    - text: アプリを作成する
+    - text: デモ アプリを作成する
       url: search-create-app-portal.md
     - text: 画像およびアプリ ファイルからテキストを抽出する
       url: cognitive-search-quickstart-blob.md
