--- a/articles/site-reliability-engineering/index.yml
+++ b/articles/site-reliability-engineering/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: dnblankedelman
   ms.author: dnb
   ms.date: 02/18/2020
-  ms.openlocfilehash: 23d5b7226f3d5531ff1fa64e42776daa14186f56
-  ms.sourcegitcommit: 23604d54077318f34062099ed1128d447989eea8
-  ms.translationtype: HT
+  ms.openlocfilehash: e5c1ef5e84f0170927d7fcac65b594d44ed33b93
+  ms.sourcegitcommit: 877491bd46921c11dd478bd25fc718ceee2dcc08
+  ms.translationtype: 
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/20/2020
-  ms.locfileid: "85117898"
+  ms.lasthandoff: 07/01/2020
+  ms.locfileid: "85833436"
 highlightedContent:
   items:
   - title: SRE の概要:SRE とは (1/3)
@@ -57,6 +57,8 @@ productDirectory:
       text: 書籍
     - url: resources/events.md
       text: events
+    - url: articles/code.md
+      text: 'よくあるご質問: SRE とコーディング'
     - url: articles/devops.md
       text: 'よくあるご質問: SRE と DevOps'
     - url: resources/links.md
@@ -65,7 +67,7 @@ conceptualContent:
   title: Azure での SRE
   summary: SRE のドキュメント
   items:
-  - title: Architecture
+  - title: アーキテクチャ
     links:
     - url: https://docs.microsoft.com/azure/architecture/framework/
       itemType: reference
