--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -109,6 +109,8 @@
           href: concepts-data-encryption-mysql.md
         - name: Azure AD 認証
           href: concepts-azure-ad-authentication.md
+        - name: インフラストラクチャの二重暗号化
+          href: concepts-infrastructure-double-encryption.md
         - name: セキュリティ ベースライン
           href: security-baseline.md
     - name: ビジネス継続性
@@ -276,6 +278,10 @@
           href: howto-data-encryption-cli.md
         - name: データ暗号化の検証
           href: howto-data-encryption-validation.md
+    - name: インフラストラクチャの二重暗号化
+      items:
+        - name: インフラストラクチャの二重暗号化を構成する
+          href: howto-double-encryption.md
     - name: Azure AD との統合
       items:
         - name: Azure AD の統合の構成
