commit translated contents

--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -112,6 +112,8 @@
               href: concepts-data-access-and-security-private-link.md
             - name: データの暗号化
               href: concepts-data-encryption-postgresql.md
+            - name: インフラストラクチャの二重暗号化
+              href: concepts-infrastructure-double-encryption.md
             - name: セキュリティ ベースライン
               href: security-baseline.md
         - name: ビジネス継続性
@@ -307,6 +309,10 @@
               href: howto-data-encryption-cli.md
             - name: データ暗号化の検証
               href: howto-data-encryption-validation.md
+        - name: インフラストラクチャの二重暗号化
+          items:
+            - name: インフラストラクチャの二重暗号化を構成する
+              href: howto-double-encryption.md
         - name: サーバーの再起動
           items:
             - name: Azure portal
