--- a/articles/active-directory/index.yml
+++ b/articles/active-directory/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: mtillman
   manager: daveba
   ms.date: 05/29/2020
-  ms.openlocfilehash: b60e20bdb5dcb35cdeadb6f8d1b6862192a0916a
-  ms.sourcegitcommit: 61d850bc7f01c6fafee85bda726d89ab2ee733ce
+  ms.openlocfilehash: 13e69e5f45244be79d06b0014d32e5c8192c777c
+  ms.sourcegitcommit: e132633b9c3a53b3ead101ea2711570e60d67b83
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/03/2020
-  ms.locfileid: "84345208"
+  ms.lasthandoff: 07/07/2020
+  ms.locfileid: "86038074"
 highlightedContent:
   items:
   - title: Azure AD とは
@@ -42,15 +42,15 @@ conceptualContent:
   items:
   - title: アプリケーション管理
     links:
-    - url: ./manage-apps/what-is-single-sign-on.md
-      itemType: concept
-      text: シングル サインオン (SSO) とは
-    - url: ./manage-apps/configure-single-sign-on-non-gallery-applications.md
-      itemType: concept
-      text: SAML ベースの SSO を構成する
-    - url: ./manage-apps/application-proxy.md
-      itemType: concept
-      text: オンプレミス アプリ用のアプリケーション プロキシ
+    - url: ./manage-apps/what-is-application-management.md
+      itemType: overview
+      text: アプリケーション管理とは
+    - url: ./manage-apps/view-applications-portal.md
+      itemType: quickstart
+      text: ID 管理にテナントを使用しているアプリを表示する
+    - url: ./manage-apps/add-application-portal-setup-sso.md
+      itemType: quickstart
+      text: SAML ベースの SSO を設定する
     footerLink:
       url: ./manage-apps/index.yml
       text: 詳細情報
