--- a/articles/time-series-insights/index.yml
+++ b/articles/time-series-insights/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: KingdomOfEnds
   ms.author: v-adgera
   ms.date: 02/12/2020
-  ms.openlocfilehash: 34d7e9ad4f312576eb1e51961feb8364b99a967e
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.openlocfilehash: 1119c4ec7c0b57f1b3707708ecb9227d737e2898
+  ms.sourcegitcommit: e132633b9c3a53b3ead101ea2711570e60d67b83
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/24/2020
-  ms.locfileid: "77651323"
+  ms.lasthandoff: 07/07/2020
+  ms.locfileid: "86043123"
 landingContent:
 - title: Azure Time Series Insights について
   linkLists:
@@ -34,7 +34,7 @@ landingContent:
     - text: Time Series Insights エクスプローラーでデータを視覚化する (プレビュー)
       url: time-series-insights-update-explorer.md
     - text: タイム シリーズ モデル
-      url: time-series-insights-update-tsm.md
+      url: concepts-model-overview.md
   - linkListType: video
     links:
     - text: IoT アプリのための Time Series Insight。 (13:31)
@@ -57,16 +57,14 @@ landingContent:
       url: time-series-insights-how-to-add-an-event-source-iothub.md
     - text: 環境を計画する
       url: time-series-insights-update-plan.md
-    - text: データ ストレージとイングレス
-      url: time-series-insights-update-storage-ingress.md
+    - text: データ取り込みの概要
+      url: concepts-ingestion-overview.md
   - linkListType: how-to-guide
     links:
     - text: プロビジョニングと管理
       url: time-series-insights-update-how-to-manage.md
     - text: データ アクセスの許可
       url: time-series-insights-data-access.md
-    - text: イングレスとクエリに対する JSON の調整
-      url: time-series-insights-update-how-to-shape-events.md
 - title: API リファレンス
   linkLists:
   - linkListType: reference
