--- a/articles/cognitive-services/immersive-reader/index.yml
+++ b/articles/cognitive-services/immersive-reader/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: IEvangelist
   ms.author: dapine
   ms.date: 01/23/2020
-  ms.openlocfilehash: c02de94050b538307b26f93ed5323acfaacb0e2a
-  ms.sourcegitcommit: 1d9f7368fa3dadedcc133e175e5a4ede003a8413
+  ms.openlocfilehash: 9f0ed5265bc4371169097d2fedcbfcddb62d3bff
+  ms.sourcegitcommit: e132633b9c3a53b3ead101ea2711570e60d67b83
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/27/2020
-  ms.locfileid: "85483875"
+  ms.lasthandoff: 07/07/2020
+  ms.locfileid: "86045435"
 landingContent:
 - title: イマーシブ リーダーの概要
   linkLists:
@@ -37,10 +37,18 @@ landingContent:
       url: ./quickstarts/client-libraries.md?pivots=programming-language-csharp
     - text: Node.js の使用
       url: ./quickstarts/client-libraries.md?pivots=programming-language-nodejs
+    - text: Java の使用 (Android)
+      url: ./quickstarts/client-libraries.md?pivots=programming-language-java-android
+    - text: Kotlin の使用 (Android)
+      url: ./quickstarts/client-libraries.md?pivots=programming-language-kotlin
     - text: Swift (iOS) の使用
       url: ./quickstarts/client-libraries.md?pivots=programming-language-swift
   - linkListType: tutorial
     links:
+    - text: Android
+      url: tutorial-android.md
+    - text: iOS
+      url: tutorial-ios.md
     - text: Python
       url: tutorial-python.md
     - text: 複数のイマーシブ リーダー リソースの使用
