--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -70,6 +70,8 @@
           items:
             - name: Xamarin.Forms
               href: notification-hubs-backend-service-xamarin-forms.md
+            - name: React Native
+              href: notification-hubs-backend-service-react-native.md
     - name: Windows Phone
       items:
         - name: アプリにプッシュ通知を送信する
