--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -324,7 +324,7 @@
           href: how-to-use-secrets-in-runs.md
         - name: 強化学習
           href: how-to-use-reinforcement-learning.md
-    - name: 機械学習の自動化
+    - name: 自動化された機械学習
       displayName: 'automl, auto ml'
       items:
         - name: 自動化された ML を使用する (Python)
