--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -403,9 +403,9 @@
         - name: Dynamics AX
           href: site-recovery-dynamicsax.md
         - name: RDS
-          href: 'site-recovery-workload.md#protect-remote-desktop-services'
+          href: site-recovery-workload.md#protect-remote-desktop-services
         - name: Exchange
-          href: 'site-recovery-workload.md#protect-exchange'
+          href: site-recovery-workload.md#protect-exchange
         - name: SAP
           href: site-recovery-sap.md
         - name: ファイル サーバー
@@ -415,7 +415,7 @@
         - name: Citrix XenApp と XenDesktop
           href: site-recovery-citrix-xenapp-and-xendesktop.md
         - name: その他のワークロード
-          href: 'site-recovery-workload.md#workload-summary'
+          href: site-recovery-workload.md#workload-summary
     - name: セカンダリ サイトへのディザスター リカバリー
       items:
         - name: VMware VM および物理サーバー
@@ -509,7 +509,7 @@
 - name: 関連項目
   items:
     - name: Azure Automation
-      href: /azure/automation/
+      href: ../automation/index.yml
 - name: リソース
   items:
     - name: Azure のロードマップ
@@ -517,7 +517,7 @@
     - name: ブログ
       href: 'https://azure.microsoft.com/blog/tag/azure-site-recovery/'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-site-recovery.html'
+      href: /answers/topics/azure-site-recovery.html
     - name: ラーニング パス
       href: /learn/azure/
     - name: 価格
