--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -138,7 +138,7 @@
       items:
         - name: Key Vault を Azure Policy と統合する
           displayName: 'key vault, certificate, key'
-          href: ../../key-vault/azure-policy.md?toc=/azure/governance/policy/toc.json&bc=/azure/governance/policy/breadcrumb/toc.json
+          href: ../../key-vault/general/azure-policy.md?bc=/azure/governance/policy/breadcrumb/toc.json&toc=/azure/governance/policy/toc.json
     - name: Azure Lighthouse の統合
       items:
         - name: 大規模なポリシーのデプロイ
