--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: ca9b94c3f16f87d4c247f1c9bd7ebeccc0af6659
-  ms.sourcegitcommit: 877491bd46921c11dd478bd25fc718ceee2dcc08
+  ms.openlocfilehash: fe377424c1a10b1356718d3c8c0d90a6a3db4d63
+  ms.sourcegitcommit: e995f770a0182a93c4e664e60c025e5ba66d6a45
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/01/2020
-  ms.locfileid: "85832765"
+  ms.lasthandoff: 07/08/2020
+  ms.locfileid: "86134351"
 highlightedContent:
   items:
   - title: Azure 開発者向けファースト ステップ ガイド
@@ -1048,7 +1048,7 @@ productDirectory:
     - migration
     - storage
     url: databox/index.yml
-  - title: Spatial Anchors (プレビュー)
+  - title: Spatial Anchors
     summary: 空間認識機能を備えたマルチユーザー対応の複合現実エクスペリエンスを作成
     imageSrc: https://static.docs.com/ui/media/product/azure/spatial-anchor-accounts.svg
     azureCategories:
