--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -131,7 +131,7 @@
     - name: AVS の評価を作成する
       href: how-to-create-azure-vmware-solution-assessment.md
     - name: SQL Server データベースにアクセスする
-      href: 'https://docs.microsoft.com/sql/dma/dma-assess-sql-data-estate-to-sqldb'
+      href: /sql/dma/dma-assess-sql-data-estate-to-sqldb
     - name: 評価のカスタマイズ
       href: how-to-modify-assessment.md
     - name: 移行ツールの追加
@@ -171,9 +171,9 @@
 - name: リソース
   items:
     - name: クラウド導入フレームワークにおける移行
-      href: 'https://docs.microsoft.com/azure/architecture/cloud-adoption/migrate/index'
+      href: /azure/cloud-adoption-framework/migrate/
     - name: REST API
-      href: 'https://docs.microsoft.com/rest/api/migrate/'
+      href: /rest/api/migrate/
     - name: Resource Manager テンプレート
       href: /azure/templates/microsoft.migrate/allversions
     - name: 価格
@@ -181,7 +181,7 @@
     - name: UserVoice
       href: 'https://aka.ms/AzureMigrateUservoice'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-migrate.html'
+      href: /answers/topics/azure-migrate.html
     - name: ブログ
       href: 'https://azure.microsoft.com/blog/tag/azure-migrate/'
     - name: Azure Migrate
